Fixed weird alignment issue with portfolio items that dont have long enough descriptions

--- a/src/pages/portfolio/pieces/PortfolioItem.css
+++ b/src/pages/portfolio/pieces/PortfolioItem.css
@@ -14,9 +14,9 @@
 }
 
 .portfolio-item--info {
-	flex-grow: 1;
 	word-break: normal;
 	word-wrap: normal;
+	width: 100%;
 }
 
 .portfolio-item--heading {
